<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="htmlContent"
      type="CharSequence" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.player.state.itemviewmodel.SelectionInteractionContentViewModel" />
  </data>

  <RelativeLayout
    android:id="@+id/radio_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="48dp"
    android:onClick="@{(v) -> viewModel.handleItemClicked()}"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.AppCompatRadioButton
      android:id="@+id/multiple_choice_radio_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="@{viewModel.answerSelected}"
      android:clickable="false"
      app:buttonTint="@color/oppiaDarkBlue" />

    <TextView
      android:id="@+id/multiple_choice_content_text_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_toEndOf="@+id/multiple_choice_radio_button"
      android:fontFamily="sans-serif"
      android:paddingTop="4dp"
      android:paddingBottom="4dp"
      android:text="@{htmlContent}"
      android:textColor="@color/oppiaDarkBlue"
      android:textSize="16sp" />
  </RelativeLayout>
</layout>
