...
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
            android:id="@+id/concept_card_heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="sans-serif-medium"
...
