...
    app:questionViewPaddingBottom="@{@dimen/space_0dp}"
    app:questionViewPaddingEnd="@{@dimen/space_0dp}"
    app:questionViewPaddingStart="@{@dimen/space_0dp}"
    app:questionViewPaddingTop="@{@dimen/space_0dp}">

    <TextView
      android:id="@+id/feedback_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:breakStrategy="simple"
      android:fontFamily="sans-serif"
      android:text="@{htmlContent}"
      android:textColor="@color/oppiaPrimaryText"
...
